# pza-plugin-vi

./: Cargo.toml  README.md  build_install_plugin.sh  post_build.rs
.github/workflows/: test-build.yml  test-tag.yml
src/: attribute_tester.rs  boolean_vector.rs  daq.rs  lib.rs  platform_logger.rs  repl.rs  tester.rs  virtual_instrument.rs  waveform.rs
src/attribute_tester/device/: bool_ro_wo.rs  enum_ro_wo.rs  json_ro_wo.rs  number_ro_wo.rs  si_ro_wo.rs  string_ro_wo.rs
src/boolean_vector/: device.rs
src/boolean_vector/device/: controller.rs  settings.rs  string_vector.rs
src/daq/: device.rs
src/daq/device/: random_si_reader.rs
src/platform_logger/: device.rs
src/repl/: device.rs
src/repl/device/: eval_echo.rs
src/tester/: device.rs
src/tester/device/: bool_ro_wo.rs  boolean.rs  bytes.rs  enum.rs  enum_ro_wo.rs  json.rs  number.rs  number_ro_wo.rs  sample.rs  si.rs  si_ro_wo.rs  string.rs  vector_f32.rs  waveform.rs
src/virtual_instrument/: device.rs  producer.rs
src/virtual_instrument/device/: bool_ro_wo.rs  datatype.rs  enum_ro_wo.rs  json_ro_wo.rs  number_ro_wo.rs  si_ro_wo.rs  string_ro_wo.rs  string_rw.rs
src/virtual_instrument/device/datatype/: dstring.rs  string_rw.rs
src/waveform/: device.rs
