[package]
name = "pza-plugin-vi"
edition = "2021"
version = "1.0.2"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
# Core
panduza-platform-core = { git = "https://github.com/Panduza/platform-core", branch = "main" }

# Main async framework for the platform
tokio = { version = "1.40.0", features = ["full"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Async trait support
async-trait = "0.1.77"
# Futures support
futures = "0.3.17"
# 
rand = "0.8.5"
# Trace instrumentation at disabled levels will be skipped and will not even be present
# in the resulting binary unless the verbosity level is specified dynamically.
# This level is configured separately for release and debug builds.
tracing = { version = "0.1.41", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
# 
# tracing-core = { version = "0.1.32" }
#
bytes = "1.10.0"

[package.metadata.cargo-post.dependencies]
# Core
panduza-platform-core = { git = "https://github.com/Panduza/panduza-platform-core" }
[features]
# Enable this if you want to build this driver as a dynamic plugin
# 
plugin = []
